compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__bit_array_assignment_string.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "\npub fn main() {\n  let assert <<\"Hello, world!\" as message:utf8>> = <<\"Hello, world!\">>\n  message\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert <<"Hello, world!" as message:utf8>> = <<"Hello, world!">>
  message
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> binary().
main() ->
    case <<"Hello, world!"/utf8>> of
        <<"Hello, world!"/utf8>> ->
            Message = ~"Hello, world!",
            Message;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value,
                start => 19,
                'end' => 87,
                pattern_start => 30,
                pattern_end => 65
            })
    end.
