compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__let_assert_should_not_use_redefined_variable.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "\nfn split_once(x: String, y: String) -> Result(#(String, String), String) {\n    Ok(#(x, y))\n}\n\npub fn main() {\n    let string = \"Hello, world!\"\n    let assert Ok(#(prefix, string)) = split_once(string, \"\\n\")\n    as { \"Failed to split: \" <> string }\n}\n        "
---
----- SOURCE CODE

fn split_once(x: String, y: String) -> Result(#(String, String), String) {
    Ok(#(x, y))
}

pub fn main() {
    let string = "Hello, world!"
    let assert Ok(#(prefix, string)) = split_once(string, "\n")
    as { "Failed to split: " <> string }
}
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec split_once(binary(), binary()) -> {ok, {binary(), binary()}} | {error, binary()}.
split_once(X, Y) ->
    {ok, {X, Y}}.

-spec main() -> {ok, {binary(), binary()}} | {error, binary()}.
main() ->
    String = ~"Hello, world!",
    case split_once(String, ~"\n") of
        {ok, {Prefix, String@1}} = _value ->
            _value;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => <<"Failed to split: "/utf8, String/binary>>,
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 8,
                value => _value@1,
                start => 148,
                'end' => 207,
                pattern_start => 159,
                pattern_end => 180
            })
    end.
