compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__more_than_one_var.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go(x) {\n  let assert [1, a, b, c] = x\n  [a, b, c]\n}"
---
----- SOURCE CODE
pub fn go(x) {
  let assert [1, a, b, c] = x
  [a, b, c]
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(list(integer())) -> list(integer()).
go(X) ->
    case X of
        [1, A, B, C] ->
            [A, B, C];

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value,
                start => 17,
                'end' => 44,
                pattern_start => 28,
                pattern_end => 40
            })
    end.
