compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__string_prefix_pattern_with_prefix_binding.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert \"Hello \" as greeting <> name = \"Hello John\"\n  #(greeting, name)\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert "Hello " as greeting <> name = "Hello John"
  #(greeting, name)
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> {binary(), binary()}.
go() ->
    case ~"Hello John" of
        <<"Hello "/utf8, Name/binary>> ->
            Greeting = ~"Hello ",
            {Greeting, Name};

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value,
                start => 16,
                'end' => 70,
                pattern_start => 27,
                pattern_end => 55
            })
    end.
